Se activa la aplicacion, a la espera de agregar validaciones y pulir detalles

--- a/FrontEnd/Bases/Barra.html
+++ b/FrontEnd/Bases/Barra.html
@@ -1,5 +1,8 @@
-<nav class="nav">
-    <li class="nax-item">
-        <a href="#" class="nav-link">#</a>
-    </li>
+<nav>
+    <ul class="nav-links">
+        <li><a href="">Inicio</a></li>
+        <li><a href="">Acerca</a></li>
+        <li><a href="">Servicios</a></li>
+    </ul>            
 </nav>
+<a class="btn" data-bs-toggle="modal" data-bs-target="#modalLogin"><button>Iniciar Sesion</button></a>
