--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,7 +1,10 @@
 {% extends 'Bases/Base.html' %}
 
-{% block content %}
+{% block tittle %}Inicio{% endblock %}
 
-    <h1>Dashboard</h1>
+{% block content %}
+    <div class="header">
+        <h1 class="text-light">Dashboard</h1>
+    </div>
 
 {% endblock %}
